--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,5 +2,5 @@ name: 'CleverBot'
 main: 'com.a2937.cleverbot.BotMakerMain'
 version: '0.0.1'
 author: 'Chara <Chara#6274>'
-description: 'Registers the BotLibre AI service with AvaIre'
+description: 'Registers the CleverBot AI service with AvaIre'
 requires: '0.7.71'
