Nest the api key under a heading so it may have a better chance of being picked back up by AvaIre.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -19,5 +19,6 @@
 # Got any questions? Contact the development team on the official support
 # server for Ava at https://avairebot.com/support
 #
-apiKey: ""
+keys:
+    apiKey: ""
 
